src/test/ui/explicit/explicit-call-to-dtor.rs
struct Foo {
    x: isize
}

impl Drop for Foo {
    fn drop(&mut self) {
        println!("kaboom");
    }
}

fn main() {
    let x = Foo { x: 3 };
    x.drop();   //~ ERROR explicit use of destructor method
}
